fixes issue where last comment in debate is not visible

--- a/sass/debates/hats.scss
+++ b/sass/debates/hats.scss
@@ -2,4 +2,8 @@
   h2 {
     text-align: center;
   }
+
+  main {
+    margin-bottom: 200px;
+  }
 }
